// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Select > Snapshot testing > should not show label 1`] = `
<div
  class="ds:flex ds:flex-col ds:relative"
>
  <label
    class="ds:hidden ds:mb-4 ds:align-top ds:text-form-label ds:font-arial ds:text-primary-gray"
    for="_r_9_"
  >
    Label
  </label>
  <div
    class="ds:flex ds:flex-row ds:relative"
  >
    <div
      class="ds:flex ds:flex-row ds:w-full"
      data-headlessui-state=""
    >
      <button
        aria-expanded="false"
        aria-haspopup="listbox"
        aria-invalid="false"
        aria-label="Label"
        class="ds:select-none ds:rounded ds:border-2 ds:w-full ds:border-border-form ds:bg-white ds:p-5 ds:text-primary-gray ds:disabled:text-inactive-gray ds:flex ds:justify-between ds:items-center ds:focus:outline-secondary-1-dark"
        data-headlessui-state=""
        id="_r_9_"
        type="button"
      >
        <span
          class="ds:font-arial ds:text-secondary-gray"
        >
          placeholder text
        </span>
        <svg
          fill="currentColor"
          height="24"
          stroke="currentColor"
          stroke-width="0"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M12 15.6964L6 9.69639L7.4 8.29639L12 12.8964L16.6 8.29639L18 9.69639L12 15.6964Z"
            fill="currentColor"
          />
        </svg>
      </button>
    </div>
  </div>
</div>
`;

exports[`Select > Snapshot testing > should render as disabled 1`] = `
<div
  class="ds:flex ds:flex-col ds:relative"
>
  <label
    class="ds:inline-block ds:mb-4 ds:align-top ds:text-form-label ds:font-arial ds:text-primary-gray"
    for="_r_i_"
  >
    Label
  </label>
  <div
    class="ds:flex ds:flex-row ds:relative"
  >
    <div
      class="ds:flex ds:flex-row ds:w-full"
      data-disabled=""
      data-headlessui-state="disabled"
    >
      <button
        aria-expanded="false"
        aria-haspopup="listbox"
        aria-invalid="false"
        aria-label="Label"
        class="ds:select-none ds:rounded ds:border-2 ds:w-full ds:border-border-form ds:bg-white ds:p-5 ds:text-primary-gray ds:disabled:text-inactive-gray ds:flex ds:justify-between ds:items-center ds:focus:outline-secondary-1-dark"
        data-disabled=""
        data-headlessui-state="disabled"
        disabled=""
        id="_r_i_"
        type="button"
      >
        <span
          class="ds:font-arial ds:text-secondary-gray"
        >
          placeholder text
        </span>
        <svg
          fill="currentColor"
          height="24"
          stroke="currentColor"
          stroke-width="0"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M12 15.6964L6 9.69639L7.4 8.29639L12 12.8964L16.6 8.29639L18 9.69639L12 15.6964Z"
            fill="currentColor"
          />
        </svg>
      </button>
    </div>
  </div>
</div>
`;

exports[`Select > Snapshot testing > should render with defaults 1`] = `
<div
  class="ds:flex ds:flex-col ds:relative"
>
  <label
    class="ds:inline-block ds:mb-4 ds:align-top ds:text-form-label ds:font-arial ds:text-primary-gray"
    for="_r_0_"
  >
    Label
  </label>
  <div
    class="ds:flex ds:flex-row ds:relative"
  >
    <div
      class="ds:flex ds:flex-row ds:w-full"
      data-headlessui-state=""
    >
      <button
        aria-expanded="false"
        aria-haspopup="listbox"
        aria-invalid="false"
        aria-label="Label"
        class="ds:select-none ds:rounded ds:border-2 ds:w-full ds:border-border-form ds:bg-white ds:p-5 ds:text-primary-gray ds:disabled:text-inactive-gray ds:flex ds:justify-between ds:items-center ds:focus:outline-secondary-1-dark"
        data-headlessui-state=""
        id="_r_0_"
        type="button"
      >
        <span
          class="ds:font-arial ds:text-secondary-gray"
        >
          placeholder text
        </span>
        <svg
          fill="currentColor"
          height="24"
          stroke="currentColor"
          stroke-width="0"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M12 15.6964L6 9.69639L7.4 8.29639L12 12.8964L16.6 8.29639L18 9.69639L12 15.6964Z"
            fill="currentColor"
          />
        </svg>
      </button>
    </div>
  </div>
</div>
`;
